<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".detailuser.DetailUserActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/image_view"
            style="@style/Wrap"
            android:layout_width="105dp"
            android:layout_height="102dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tv_following"
            style="@style/Wrap.ContextUser"
            android:layout_marginStart="40dp"
            android:text="@string/following_text"
            app:layout_constraintStart_toEndOf="@+id/tv_followers"
            app:layout_constraintTop_toBottomOf="@+id/jml_following" />

        <TextView
            android:id="@+id/tv_followers"
            style="@style/Wrap.ContextUser"
            android:text="@string/followers_text"
            app:layout_constraintEnd_toEndOf="@+id/image_view"
            app:layout_constraintStart_toStartOf="@+id/image_view"
            app:layout_constraintTop_toBottomOf="@+id/jml_followers" />

        <TextView
            android:id="@+id/tv_repository"
            style="@style/Wrap.ContextUser"
            android:layout_marginEnd="40dp"
            android:text="@string/repository_text"
            app:layout_constraintEnd_toStartOf="@+id/tv_followers"
            app:layout_constraintTop_toBottomOf="@+id/jml_repository" />

        <TextView
            android:id="@+id/jml_repository"
            style="@style/Wrap.TotalData"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="@+id/tv_repository"
            app:layout_constraintStart_toStartOf="@+id/tv_repository"
            app:layout_constraintTop_toBottomOf="@+id/image_view"
            tools:gravity="center_horizontal"
            tools:text="@string/repository" />

        <TextView
            android:id="@+id/jml_followers"
            style="@style/Wrap.TotalData"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="@+id/tv_followers"
            app:layout_constraintStart_toStartOf="@+id/tv_followers"
            app:layout_constraintTop_toBottomOf="@+id/image_view"
            tools:gravity="center_horizontal"
            tools:text="@string/followers" />

        <TextView
            android:id="@+id/jml_following"
            style="@style/Wrap.TotalData"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="@+id/tv_following"
            app:layout_constraintStart_toStartOf="@+id/tv_following"
            app:layout_constraintTop_toBottomOf="@+id/image_view"
            tools:gravity="center_horizontal"
            tools:text="@string/following" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guide2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="365dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guide1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="226dp" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="48dp"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/guide2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guide1"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/txt_name"
            style="@style/WrapMatch.DetailUser"
            android:layout_marginTop="4dp"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guide1"
            tools:text="@string/name" />

        <TextView
            android:id="@+id/txt_username"
            style="@style/WrapMatch.DetailUser"
            android:textColor="#0277BD"
            android:textSize="16sp"
            android:textStyle="italic"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_name"
            tools:text="@string/username" />

        <TextView
            android:id="@+id/tv_company"
            style="@style/WrapMatch.DetailUser"
            android:layout_width="0dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:gravity="center_vertical"
            android:hint="@string/no_data"
            android:textSize="12sp"
            app:drawableStartCompat="@drawable/ic_baseline_business"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_username"
            tools:text="@string/company" />

        <TextView
            android:id="@+id/tv_location"
            style="@style/WrapMatch"
            android:layout_width="0dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:gravity="center_vertical"
            android:hint="@string/no_data"
            android:textSize="12sp"
            app:drawableStartCompat="@drawable/ic_baseline_location"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tv_company"
            app:layout_constraintTop_toBottomOf="@+id/tv_company"
            tools:text="@string/location" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            style="@style/WrapMatch"
            android:layout_marginTop="8dp"
            android:background="@color/purple_1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guide2"
            app:tabTextColor="@color/black" />

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/view_pager"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/purple_0"
            app:layout_constraintBottom_toTopOf="@+id/guide3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tabs" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guide3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="730dp" />

        <ToggleButton
            android:id="@+id/favorite_toggle"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_marginTop="56dp"
            android:background="@drawable/favorite_toggle"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:textColor="@color/black"
            android:textOff="@string/favorite"
            android:textOn="@string/unfavorite"
            app:layout_constraintBottom_toTopOf="@+id/guide1"
            app:layout_constraintEnd_toEndOf="@+id/image_view"
            app:layout_constraintStart_toStartOf="@+id/image_view"
            app:layout_constraintTop_toBottomOf="@+id/image_view"
            tools:fontFamily="sans-serif-medium" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>

